--- a/codeAcademy/css/styles.css
+++ b/codeAcademy/css/styles.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 header{
     text-align: center;
     margin-bottom: 20px;
@@ -261,7 +266,7 @@ footer p.copyright {
 
 
   .containerform {
-    max-width: 600px;
+    max-width: 450px;
     margin: 50px auto;
     background-color: #8888;
     padding: 20px;
@@ -270,9 +275,10 @@ footer p.copyright {
     color: black;
 }
 
-h2 {
-    text-align: center;
+.h2form {
+    text-align: left;
     margin-bottom: 20px;
+    font-size: 20px;
 }
 
 form label {
