--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@
   box-sizing: border-box;
 }
 
+/* Yami */
+
 header {
   text-align: center;
   margin-bottom: 20px;
@@ -28,7 +30,8 @@ h1 {
 }
 h2 {
   text-align: center;
-  width: 400px;
+  max-width: 80%;
+  margin: auto;
   border-bottom: solid 2px rgb(7, 175, 97);
   font-size: 1.4rem;
 }
@@ -75,10 +78,11 @@ section#Testimonios {
   margin: auto;
 }
 
+/* Vicky */
 #Conocenos {
+  padding: 50px 0;
   background-color: #28a745; /* En mi compu este se veia como Color verde de Nico */
   color: antiquewhite;
-  padding: 50px 0;
   text-align: center;
 }
 
@@ -87,18 +91,21 @@ section#Testimonios {
   margin: 0 auto;
   display: flex;
   align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 #Conocenos .content {
   flex: 1;
-  text-align: left;
-  margin-right: 20px;
+  text-align: center;
+  margin: 0 20px;
 }
 
 #Conocenos img {
-  max-width: 70%;
-  height: auto;
+  max-width: 30%;
+  height:auto;
   transition: transform 0.3s ease;
+  margin: 20px auto ;
 }
 
 #Conocenos img:hover {
@@ -109,14 +116,17 @@ section#Testimonios {
   font-size: 32px;
   margin-bottom: 20px;
 }
+
 #Conocenos p {
   font-size: 18px;
   line-height: 1.6;
   margin-bottom: 30px;
 }
+
+/* Footer */
 footer {
   background-color: #28a745;
-  padding: 10px;
+  padding: 20px;
   text-align: center;
   color: antiquewhite;
 }
@@ -131,16 +141,18 @@ footer {
   font-size: 24px;
   transition: color 0.3s;
 }
+
 .red-social a:hover {
   color: blue; /* Cambia el color al pasar el mouse por encima */
 }
+
 footer p {
   margin-top: 20px;
 }
+
 footer p.copyright {
   color: antiquewhite;
   margin-top: 20px;
-  margin-left: 50px;
   text-align: center;
 }
 
@@ -148,6 +160,7 @@ footer p.copyright {
   display: flex;
   justify-content: center;
   align-items: center;
+  justify-self: center;
   padding-right: 2rem;
 }
 
@@ -157,6 +170,112 @@ footer p.copyright {
   align-items: center;
   justify-self: center;
   align-self: center;
+}
+
+/* Media Queries */
+@media (max-width: 600px) {
+  .navbar ul li {
+    display: block;
+    margin: 10px 0;
+  }
+
+  h1 {
+    font-size: 24px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
+  p {
+    font-size: 16px;
+  }
+
+  section {
+    padding: 10px;
+  }
+
+ 
+  #Conocenos .container {
+    flex-direction: row;
+    justify-content: center; /* Centra el contenido horizontalmente */
+    text-align: center;
+  }
+
+  #Conocenos .content {
+    margin: 0 10px;
+  }
+
+  #Conocenos img {
+    max-width: 70%;
+  }
+
+  footer {
+    padding: 10px;
+  }
+}
+
+@media (min-width: 601px) and (max-width: 1024px) {
+  h1 {
+    font-size: 28px;
+  }
+
+  h2 {
+    font-size: 22px;
+  }
+
+  p {
+    font-size: 17px;
+  }
+
+  section {
+    padding: 15px;
+  }
+
+  #Conocenos .container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  #Conocenos .content {
+    margin-right: 0;
+  }
+
+  #Conocenos img {
+    max-width: 90%;
+    margin: 20px 0;
+  }
+}
+
+@media (min-width: 1025px) {
+  h1 {
+    font-size: 32px;
+  }
+
+  h2 {
+    font-size: 24px;
+  }
+
+  p {
+    font-size: 18px;
+  }
+
+  section {
+    padding: 20px;
+  }
+
+  #Conocenos .container {
+    flex-direction: row;
+    text-align: left;
+  }
+
+  #Conocenos .content {
+    margin-right: 20px;
+  }
+
+  #Conocenos img {
+    max-width: 70%;
+  }
 }
 
 /* Nico */
@@ -173,7 +292,11 @@ footer p.copyright {
   text-shadow: 0 0 8px black;
   min-height: 100vh;
 }
-
+h2 {
+  text-align: center;
+  width: 400px;
+  border-bottom: solid 2px rgb(7, 175, 97);
+}
 .curso {
   transition: ease 0.5s;
   max-height: 70px;
@@ -182,7 +305,7 @@ footer p.copyright {
   border-radius: 2em;
   border: solid 2px #26d367;
 }
-.curso[activo] {
+.curso[active] {
   max-height: 250px;
 }
 
@@ -198,10 +321,8 @@ footer p.copyright {
   z-index: 2;
   padding: 1em;
   text-align: center;
+  font-size: small;
   background-color: #26d367;
-}
-.titulo-curso h3 {
-  font-size: 1rem;
 }
 .titulo-curso:after {
   z-index: -1;
@@ -245,17 +366,18 @@ footer p.copyright {
 }
 
 .info-curso-inferior {
+  font-size: smaller;
+  text-align: center;
   opacity: 0;
   padding: 1em;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
-.curso[activo] .info-curso-inferior {
+.curso[active] .info-curso-inferior {
   opacity: 1;
 }
 
+
 /* santi  */
+
 
 .containerform {
   max-width: 450px;
@@ -306,11 +428,79 @@ form button:hover {
 }
 
 .error {
-  text-align: center;
+text-align: center;
   color: rgb(212, 92, 11);
   font-size: 24px;
 }
 
-.buttonform {
-  color: black;
+.buttonform{
+color:black
+}
+
+/* Media Queries hasta seccion Testimonios */
+
+@media (max-width: 600px) {
+  nav ul li {
+    display: block;
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+  h1 {
+    font-size: 24px;
+    text-align: center;
+  }
+  h2 {
+    font-size: 20px;
+    text-align: center;
+  }
+  p {
+    font-size: 16px;
+  }
+  section#Testimonios {
+    padding: 10px;
+  }
+}
+
+@media (min-width: 601px) and (max-width: 1024px) {
+  h1 {
+    font-size: 28px;
+    text-align: center;
+  }
+  h2 {
+    font-size: 22px;
+    text-align: center;
+  }
+  p {
+    font-size: 17px;
+    max-width: 90%;
+  }
+  section {
+    padding: 15px;
+    margin-bottom: 15px;
+  }
+  section#Testimonios {
+    padding: 15px;
+  }
+}
+
+@media (min-width: 1025px) {
+  h1 {
+    font-size: 32px;
+    text-align: center;
+  }
+  h2 {
+    font-size: 24px;
+    text-align: center;
+  }
+  p {
+    font-size: 18px;
+    max-width: 800%;
+  }
+  section {
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+  section#Testimonios {
+    padding: 20px;
+  }
 }
