--- a/css/styles.css
+++ b/css/styles.css
@@ -30,8 +30,8 @@ h1 {
 }
 h2 {
   text-align: center;
-  max-width: 80%;
-  margin: auto;
+  width: 30%;
+  margin: 1em auto;
   border-bottom: solid 2px rgb(7, 175, 97);
   font-size: 1.4rem;
 }
@@ -103,9 +103,9 @@ section#Testimonios {
 
 #Conocenos img {
   max-width: 30%;
-  height:auto;
+  height: auto;
   transition: transform 0.3s ease;
-  margin: 20px auto ;
+  margin: 20px auto;
 }
 
 #Conocenos img:hover {
@@ -172,6 +172,257 @@ footer p.copyright {
   align-self: center;
 }
 
+/* Nico */
+
+.info-cursos {
+  padding: 2em 0;
+  font-family: "Open Sans", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2em;
+  background-color: #222222;
+  color: aliceblue;
+  text-shadow: 0 0 8px black;
+}
+
+.curso {
+  transition: ease 0.5s;
+  max-height: 70px;
+  width: 70%;
+  overflow: hidden;
+  border-radius: 2em;
+  border: solid 2px #26d367;
+}
+.curso[activo] {
+  max-height: 250px;
+}
+
+.info-curso-superior {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  text-align: center;
+  position: relative;
+  min-height: 70px;
+  overflow: hidden;
+}
+.titulo-curso {
+  z-index: 2;
+  padding: 1em;
+  text-align: center;
+  background-color: #26d367;
+}
+.titulo-curso h3 {
+  font-size: 1.2rem;
+}
+.titulo-curso:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 35%;
+  width: 20%;
+  height: 100%;
+  background-color: #26d367;
+  clip-path: circle(50% at 50% 50%);
+}
+.nivel-curso {
+  position: relative;
+  padding-left: 3em;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #0f723c;
+  font-weight: 700;
+}
+.nivel-curso p {
+  text-align: start;
+  max-width: 80%;
+}
+.boton-curso {
+  position: absolute;
+  width: 60px;
+  height: 100%;
+  right: 0%;
+}
+.boton-curso:hover {
+  background-color: #91dbad75;
+}
+.flecha-info-curso {
+  cursor: default;
+  position: absolute;
+  top: 30%;
+  right: 35%;
+  transform: rotate(90deg);
+}
+
+.info-curso-inferior {
+  font-size: smaller;
+  text-align: center;
+  opacity: 0;
+  padding: 1em;
+}
+.curso[activo] .info-curso-inferior {
+  opacity: 1;
+}
+
+@media (max-width: 950px) {
+  .titulo-curso h3 {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 600px) {
+  .titulo-curso:after {
+    display: none;
+  }
+  .curso {
+    width: 90%;
+    max-height: 90px;
+  }
+  .info-curso-superior {
+    min-height: 90px;
+  }
+  .nivel-curso {
+    padding-left: 0.5em;
+  }
+  .curso[activo] {
+    max-height: 350px;
+  }
+}
+
+/* santi  */
+
+.containerform {
+  max-width: 450px;
+  margin: 50px auto;
+  background-color: #28a745;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  color: white;
+}
+
+.h2form {
+  text-align: left;
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+
+form label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+form input[type="text"],
+form input[type="email"],
+form input[type="tel"],
+form textarea,
+form select {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-sizing: border-box;
+}
+
+form button {
+  width: 100%;
+  padding: 10px;
+  background-color: #40d369;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+form button:hover {
+  background-color: #26d367;
+}
+
+.error {
+  text-align: center;
+  color: rgb(212, 92, 11);
+  font-size: 24px;
+}
+
+.buttonform {
+  color: black;
+}
+
+select {
+  color: white;
+  background-color: #0f723c;
+}
+/* Media Queries hasta seccion Testimonios */
+
+@media (max-width: 600px) {
+  nav ul li {
+    display: block;
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+  h1 {
+    font-size: 24px;
+    text-align: center;
+  }
+  h2 {
+    font-size: 20px;
+    text-align: center;
+  }
+  p {
+    font-size: 16px;
+  }
+  section#Testimonios {
+    padding: 10px;
+  }
+}
+
+@media (min-width: 601px) and (max-width: 1024px) {
+  h1 {
+    font-size: 28px;
+    text-align: center;
+  }
+  h2 {
+    font-size: 22px;
+    text-align: center;
+  }
+  p {
+    font-size: 17px;
+    max-width: 90%;
+  }
+  section {
+    padding: 15px;
+    margin-bottom: 15px;
+  }
+  section#Testimonios {
+    padding: 15px;
+  }
+}
+
+@media (min-width: 1025px) {
+  h1 {
+    font-size: 32px;
+    text-align: center;
+  }
+  h2 {
+    font-size: 24px;
+    text-align: center;
+  }
+  p {
+    font-size: 18px;
+    max-width: 800%;
+  }
+  section {
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+  section#Testimonios {
+    padding: 20px;
+  }
+}
+
 /* Media Queries */
 @media (max-width: 600px) {
   .navbar ul li {
@@ -185,6 +436,7 @@ footer p.copyright {
 
   h2 {
     font-size: 20px;
+    width: 60%;
   }
 
   p {
@@ -195,7 +447,6 @@ footer p.copyright {
     padding: 10px;
   }
 
- 
   #Conocenos .container {
     flex-direction: row;
     justify-content: center; /* Centra el contenido horizontalmente */
@@ -275,232 +526,5 @@ footer p.copyright {
 
   #Conocenos img {
     max-width: 70%;
-  }
-}
-
-/* Nico */
-
-.info-cursos {
-  padding: 2em 0;
-  font-family: "Open Sans", sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2em;
-  background-color: #222222;
-  color: aliceblue;
-  text-shadow: 0 0 8px black;
-  min-height: 100vh;
-}
-h2 {
-  text-align: center;
-  width: 400px;
-  border-bottom: solid 2px rgb(7, 175, 97);
-}
-.curso {
-  transition: ease 0.5s;
-  max-height: 70px;
-  width: 70%;
-  overflow: hidden;
-  border-radius: 2em;
-  border: solid 2px #26d367;
-}
-.curso[active] {
-  max-height: 250px;
-}
-
-.info-curso-superior {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  text-align: center;
-  position: relative;
-  min-height: 70px;
-  overflow: hidden;
-}
-.titulo-curso {
-  z-index: 2;
-  padding: 1em;
-  text-align: center;
-  font-size: small;
-  background-color: #26d367;
-}
-.titulo-curso:after {
-  z-index: -1;
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 35%;
-  width: 20%;
-  height: 100%;
-  background-color: #26d367;
-  clip-path: circle(50% at 50% 50%);
-}
-.nivel-curso {
-  position: relative;
-  padding-left: 3em;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  background-color: #0f723c;
-  font-weight: 700;
-}
-.nivel-curso p {
-  text-align: start;
-  max-width: 80%;
-}
-.boton-curso {
-  position: absolute;
-  width: 60px;
-  height: 100%;
-  right: 0%;
-}
-.boton-curso:hover {
-  background-color: #91dbad75;
-}
-.flecha-info-curso {
-  cursor: default;
-  position: absolute;
-  top: 30%;
-  right: 35%;
-  transform: rotate(90deg);
-}
-
-.info-curso-inferior {
-  font-size: smaller;
-  text-align: center;
-  opacity: 0;
-  padding: 1em;
-}
-.curso[active] .info-curso-inferior {
-  opacity: 1;
-}
-
-
-/* santi  */
-
-
-.containerform {
-  max-width: 450px;
-  margin: 50px auto;
-  background-color: #8888;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  color: black;
-}
-
-.h2form {
-  text-align: left;
-  margin-bottom: 20px;
-  font-size: 20px;
-}
-
-form label {
-  display: block;
-  margin-bottom: 5px;
-}
-
-form input[type="text"],
-form input[type="email"],
-form input[type="tel"],
-form textarea,
-form select {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  box-sizing: border-box;
-}
-
-form button {
-  width: 100%;
-  padding: 10px;
-  background-color: #40d369;
-  color: #fff;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-form button:hover {
-  background-color: #26d367;
-}
-
-.error {
-text-align: center;
-  color: rgb(212, 92, 11);
-  font-size: 24px;
-}
-
-.buttonform{
-color:black
-}
-
-/* Media Queries hasta seccion Testimonios */
-
-@media (max-width: 600px) {
-  nav ul li {
-    display: block;
-    margin-right: 0;
-    margin-bottom: 10px;
-  }
-  h1 {
-    font-size: 24px;
-    text-align: center;
-  }
-  h2 {
-    font-size: 20px;
-    text-align: center;
-  }
-  p {
-    font-size: 16px;
-  }
-  section#Testimonios {
-    padding: 10px;
-  }
-}
-
-@media (min-width: 601px) and (max-width: 1024px) {
-  h1 {
-    font-size: 28px;
-    text-align: center;
-  }
-  h2 {
-    font-size: 22px;
-    text-align: center;
-  }
-  p {
-    font-size: 17px;
-    max-width: 90%;
-  }
-  section {
-    padding: 15px;
-    margin-bottom: 15px;
-  }
-  section#Testimonios {
-    padding: 15px;
-  }
-}
-
-@media (min-width: 1025px) {
-  h1 {
-    font-size: 32px;
-    text-align: center;
-  }
-  h2 {
-    font-size: 24px;
-    text-align: center;
-  }
-  p {
-    font-size: 18px;
-    max-width: 800%;
-  }
-  section {
-    padding: 20px;
-    margin-bottom: 20px;
-  }
-  section#Testimonios {
-    padding: 20px;
   }
 }
